--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -49,7 +49,17 @@
   }
 
   .ds-table {
-    text-align: center;
+    th,td {
+      text-align: center !important;
+    }
+    .table-pic {
+      width: 50px;
+      height: 50px;
+      margin: 0 auto;
+      img {
+        width: 100%;
+      }
+    }
   }
 
   .ds-moudle-hd {
