优化新建课程

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -76,3 +76,9 @@
   .ds-btn.ds-btn-login {
     width: 100% !important;
   }
+
+// .ds-tabs {
+//   .el-tab-pane {
+//     padding-top: 10px;
+//   }
+// }
