--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -13,11 +13,15 @@ body {
 * {
     margin: 0;
     padding: 0;
+    outline: none;
 }
 
-a img {
+a,img {
     border: 0;
 }
 
 a {
-    text-decoration: none;}
+    text-decoration: none;
+}
+
+button:focus{ outline: 0 !important; } 
